--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -18,24 +18,24 @@ font-size: 20px;
 margin-right: 70px;
 }
 
-#Club{
+#Career{
 margin-right: 70px ;
 }
 
-.LeftPicture{
+.GOATLeft{
 position: absolute;
 left: 40px;
 top: 120px;
 }
 
-.MiddlePicture{
+.IndexMiddle{
 position: absolute;
 top: 230px;
 width: 500px;
 height: 300px;
 }
 
-.RightPicture{
+.GOATRight{
 position: absolute;
 width: 290px;
 height: 180px;
@@ -43,9 +43,19 @@ left: 945px;
 top: 350px;
 }
 
-.Info{
+.CareerRight{
 position: absolute;
-top: 100px;
+top: 60px;
+left: 780px;
+width: 400px;
+height: 200px;
+}
+
+.CareerLeft{
+position: absolute;
+top: 200px;
+width: 200px;
+height: 200px;
 }
 
 h1{
@@ -67,4 +77,11 @@ top: 220px;
 margin-left: 30%;
 margin-right: 30%;
 line-height: 35px;
+}
+
+h5{
+position: absolute;
+top: 60px;
+left: 20px;
+right: 600px;
 }
