--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -2,7 +2,6 @@
 background-color: lightblue;
 display: grid;
 margin: 0px;
-grid-template-columns: 1fr;
 grid-row-gap: 250px;
 }
 
@@ -15,6 +14,10 @@ align-items: center;
 width: 1280px;
 height: 50px;
 font-size: 20px;
+}
+
+.main{
+width: 100%;
 }
 
 #Home{
